--- a/brasil/brasil/Screens/HomeVC/HomeVC.storyboard
+++ b/brasil/brasil/Screens/HomeVC/HomeVC.storyboard
@@ -11,13 +11,93 @@
         <!--HomeVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="HomeVC" customModule="brasil" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeVC" id="Y6W-OH-hqX" customClass="HomeVC" customModule="brasil" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOMEEEE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vdI-Mw-tVQ">
+                                <rect key="frame" x="20" y="84" width="353" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9LJ-cb-kut">
+                                <rect key="frame" x="20" y="155" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uYn-t1-uf0">
+                                <rect key="frame" x="20" y="201" width="61" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GfU-8z-z4j">
+                                <rect key="frame" x="96" y="194" width="277" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9ig-Ct-eOE">
+                                <rect key="frame" x="96" y="148" width="277" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVn-Rk-rW1">
+                                <rect key="frame" x="20" y="303" width="353" height="34"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Edit Information">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedEditInformationButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="nmO-k6-HKb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KFR-Hw-x0F">
+                                <rect key="frame" x="20" y="303" width="353" height="34"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Save Information">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedSaveInformationButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="9a1-9g-EWo"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vdI-Mw-tVQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="5Rf-DT-Zku"/>
+                            <constraint firstItem="9LJ-cb-kut" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="5w4-EX-gbz"/>
+                            <constraint firstItem="9ig-Ct-eOE" firstAttribute="top" secondItem="vdI-Mw-tVQ" secondAttribute="bottom" constant="43" id="79s-ei-NOW"/>
+                            <constraint firstItem="GfU-8z-z4j" firstAttribute="top" secondItem="vdI-Mw-tVQ" secondAttribute="bottom" constant="89" id="7Uv-Yf-iLr"/>
+                            <constraint firstItem="9ig-Ct-eOE" firstAttribute="leading" secondItem="GfU-8z-z4j" secondAttribute="leading" id="9yT-oj-ahp"/>
+                            <constraint firstItem="KVn-Rk-rW1" firstAttribute="top" secondItem="GfU-8z-z4j" secondAttribute="bottom" constant="75" id="E21-dp-vqC"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vdI-Mw-tVQ" secondAttribute="trailing" constant="20" id="E9S-lt-2bx"/>
+                            <constraint firstItem="vdI-Mw-tVQ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="25" id="Iz3-40-OEC"/>
+                            <constraint firstItem="GfU-8z-z4j" firstAttribute="leading" secondItem="uYn-t1-uf0" secondAttribute="trailing" constant="15" id="KHs-aD-Vi6"/>
+                            <constraint firstItem="KFR-Hw-x0F" firstAttribute="top" secondItem="GfU-8z-z4j" secondAttribute="bottom" constant="75" id="Kzr-OK-Nhp"/>
+                            <constraint firstItem="9LJ-cb-kut" firstAttribute="top" secondItem="vdI-Mw-tVQ" secondAttribute="bottom" constant="50" id="Q2S-dg-OhD"/>
+                            <constraint firstItem="KVn-Rk-rW1" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Sdz-UG-dLd"/>
+                            <constraint firstItem="KFR-Hw-x0F" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="U0i-W1-EpA"/>
+                            <constraint firstItem="uYn-t1-uf0" firstAttribute="top" secondItem="9LJ-cb-kut" secondAttribute="bottom" constant="25" id="VLg-Te-xyl"/>
+                            <constraint firstItem="uYn-t1-uf0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="YDP-vV-0rw"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KFR-Hw-x0F" secondAttribute="trailing" constant="20" id="doe-1J-Kcd"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KVn-Rk-rW1" secondAttribute="trailing" constant="20" id="m4q-fK-oW0"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="9ig-Ct-eOE" secondAttribute="trailing" constant="20" id="mSP-yB-IFg"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GfU-8z-z4j" secondAttribute="trailing" constant="20" id="rib-C3-DcJ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="countryLabel" destination="uYn-t1-uf0" id="pQe-vq-S5v"/>
+                        <outlet property="countryTextField" destination="GfU-8z-z4j" id="JfI-Lf-v31"/>
+                        <outlet property="editInformationButton" destination="KVn-Rk-rW1" id="tWn-FI-Fxn"/>
+                        <outlet property="nameLabel" destination="9LJ-cb-kut" id="6uW-xW-IjC"/>
+                        <outlet property="nameTextField" destination="9ig-Ct-eOE" id="nHu-7O-O6e"/>
+                        <outlet property="saveInformationButton" destination="KFR-Hw-x0F" id="iiz-gU-XH2"/>
+                        <outlet property="welcomeLabel" destination="vdI-Mw-tVQ" id="Mem-he-0of"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
