EmbassyVC - Tela com API funcionando e mostrando table view

--- a/brasil/brasil/Screens/EmbassyVC/EmbassyVC.storyboard
+++ b/brasil/brasil/Screens/EmbassyVC/EmbassyVC.storyboard
@@ -11,13 +11,28 @@
         <!--EmbassyVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="EmbassyVC" title="EmbassyVC" id="Y6W-OH-hqX" customClass="EmbassyVC" customModule="brasil" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EmbassyVC" id="Y6W-OH-hqX" customClass="EmbassyVC" customModule="brasil" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Stm-Ph-xei">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Stm-Ph-xei" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="H84-Ef-kI5"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Stm-Ph-xei" secondAttribute="trailing" id="jXN-w2-grw"/>
+                            <constraint firstItem="Stm-Ph-xei" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="rBO-I5-mL5"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Stm-Ph-xei" secondAttribute="bottom" id="yvz-cM-jed"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Stm-Ph-xei" id="Yba-b5-8n8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
