Tela de Activities - Estrutura pronta com API e table view funcionando

--- a/brasil/brasil/Screens/ActivitiesVC/ActivitiesVC.storyboard
+++ b/brasil/brasil/Screens/ActivitiesVC/ActivitiesVC.storyboard
@@ -16,23 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yO-If-ClH">
-                                <rect key="frame" x="159" y="408.66666666666669" width="75" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QM1-FB-0yA">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2yO-If-ClH" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="JnU-lH-A6C"/>
-                            <constraint firstItem="2yO-If-ClH" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="iOd-dT-Y2P"/>
+                            <constraint firstItem="QM1-FB-0yA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="LYE-JG-ofJ"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="QM1-FB-0yA" secondAttribute="trailing" id="W5f-h1-yaS"/>
+                            <constraint firstItem="QM1-FB-0yA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="qHb-LX-3Uv"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="QM1-FB-0yA" secondAttribute="bottom" id="xFA-12-cIT"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="QM1-FB-0yA" id="Lhr-j0-lBU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="91" y="-34"/>
+            <point key="canvasLocation" x="-31" y="-15"/>
         </scene>
     </scenes>
     <resources>
