--- a/brasil/brasil/Screens/LoginVC/Base.lproj/Main.storyboard
+++ b/brasil/brasil/Screens/LoginVC/Base.lproj/Main.storyboard
@@ -70,9 +70,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gI0-8s-R8j">
-                                <rect key="frame" x="248.99999999999997" y="732" width="81.666666666666657" height="35"/>
+                                <rect key="frame" x="249.00000000000003" y="732" width="75.333333333333343" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Sign up"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign in"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -108,12 +108,15 @@
                     </view>
                     <navigationItem key="navigationItem" id="9Hm-Fk-YRf"/>
                     <connections>
+                        <outlet property="accountLabel" destination="M6J-mk-cOW" id="JJk-Wk-vtf"/>
                         <outlet property="emailTextField" destination="3sp-Yz-r4P" id="5nP-8I-LHs"/>
+                        <outlet property="facebookLoginButton" destination="YHD-Fx-ky4" id="hl4-mc-vKY"/>
                         <outlet property="forgotPasswordButton" destination="1Pe-qm-EYs" id="RO9-S7-cDI"/>
                         <outlet property="gmailLoginButton" destination="6h3-Mz-3fd" id="jtF-01-pag"/>
                         <outlet property="loginButton" destination="RFd-lg-M9k" id="eHb-fJ-5cC"/>
                         <outlet property="orLabel" destination="Xyn-fC-vNs" id="vtQ-eV-TVH"/>
                         <outlet property="passwordTextField" destination="fVk-hc-muv" id="mzy-QI-Gjb"/>
+                        <outlet property="registerButton" destination="gI0-8s-R8j" id="cUj-KB-OS2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
