--- a/brasil/brasil/Screens/LoginVC/Base.lproj/Main.storyboard
+++ b/brasil/brasil/Screens/LoginVC/Base.lproj/Main.storyboard
@@ -20,9 +20,6 @@
                                 <rect key="frame" x="30" y="366" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="forgot Password?"/>
-                                <connections>
-                                    <action selector="tappedLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4dj-nA-6fe"/>
-                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3sp-Yz-r4P">
                                 <rect key="frame" x="30" y="263" width="333" height="34"/>
@@ -38,6 +35,9 @@
                                 <rect key="frame" x="30" y="431" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Login"/>
+                                <connections>
+                                    <action selector="tappedLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Xu-dG-pyh"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xyn-fC-vNs">
                                 <rect key="frame" x="30" y="496" width="333" height="21"/>
