--- a/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
+++ b/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
@@ -30,7 +30,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eI2-w8-Hl0">
                                 <rect key="frame" x="30" y="294" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Recover"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -47,6 +47,11 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sfM-QK-qyu" secondAttribute="trailing" constant="30" id="yn2-Ew-2t9"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="V2w-HA-AkA" id="7zr-43-nIa"/>
+                        <outlet property="forgotPasswordLabel" destination="sfM-QK-qyu" id="WST-Xh-Tby"/>
+                        <outlet property="recoverButton" destination="eI2-w8-Hl0" id="z07-B1-cgs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
