--- a/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
+++ b/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
@@ -11,24 +11,24 @@
         <!--Forgot PasswordVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="ForgotPasswordVC" customModule="brasil" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ForgotPasswordVC" id="Y6W-OH-hqX" customClass="ForgotPasswordVC" customModule="brasil" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot your Password?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfM-QK-qyu">
-                                <rect key="frame" x="30" y="119" width="333" height="21"/>
+                                <rect key="frame" x="30" y="99" width="333" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V2w-HA-AkA">
-                                <rect key="frame" x="30" y="200" width="333" height="34"/>
+                                <rect key="frame" x="30" y="150" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eI2-w8-Hl0">
-                                <rect key="frame" x="30" y="294" width="333" height="35"/>
+                                <rect key="frame" x="30" y="214" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Recover"/>
                             </button>
@@ -38,12 +38,12 @@
                         <constraints>
                             <constraint firstItem="eI2-w8-Hl0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="DO8-vB-das"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="V2w-HA-AkA" secondAttribute="trailing" constant="30" id="FvA-bS-eL0"/>
-                            <constraint firstItem="sfM-QK-qyu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="60" id="RHE-KX-waV"/>
+                            <constraint firstItem="sfM-QK-qyu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="RHE-KX-waV"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="eI2-w8-Hl0" secondAttribute="trailing" constant="30" id="XYT-Jv-OFr"/>
                             <constraint firstItem="V2w-HA-AkA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="aG9-MD-KX5"/>
-                            <constraint firstItem="eI2-w8-Hl0" firstAttribute="top" secondItem="V2w-HA-AkA" secondAttribute="bottom" constant="60" id="eDq-Pe-Swk"/>
+                            <constraint firstItem="eI2-w8-Hl0" firstAttribute="top" secondItem="V2w-HA-AkA" secondAttribute="bottom" constant="30" id="eDq-Pe-Swk"/>
                             <constraint firstItem="sfM-QK-qyu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="k94-w2-KE5"/>
-                            <constraint firstItem="V2w-HA-AkA" firstAttribute="top" secondItem="sfM-QK-qyu" secondAttribute="bottom" constant="60" id="uN0-8f-qxT"/>
+                            <constraint firstItem="V2w-HA-AkA" firstAttribute="top" secondItem="sfM-QK-qyu" secondAttribute="bottom" constant="30" id="uN0-8f-qxT"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sfM-QK-qyu" secondAttribute="trailing" constant="30" id="yn2-Ew-2t9"/>
                         </constraints>
                     </view>
