--- a/brasil/brasil/Screens/LoginVC/Base.lproj/Main.storyboard
+++ b/brasil/brasil/Screens/LoginVC/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
                                 <rect key="frame" x="30" y="366" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="forgot Password?"/>
+                                <connections>
+                                    <action selector="tappedForgotPasswordButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="84c-tr-fgC"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3sp-Yz-r4P">
                                 <rect key="frame" x="30" y="263" width="333" height="34"/>
